text wrapping fixed in notifications page

--- a/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/applyforlicense.less
+++ b/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/applyforlicense.less
@@ -279,6 +279,9 @@ a.btn:not([href]):not([tabindex]) {
 .error-text-alignment {
 	text-align: left;
 }
+.notificationList-status {
+	white-space: normal;
+}
 @media screen and (min-width: 768px) and (max-width: 1023.9px) {
 	#termsAndConditionsModal {
 		.modal-content {
